# birdheatmap

./: .gitignore  Makefile  README.md  pyproject.toml
deploy/: birdheatmap.env.example  birdheatmap.service  install.sh
samples/: ui_rendered.html
src/birdheatmap/: __init__.py  __main__.py  cache.py  config.py  db.py  scheduler.py  sync.py  web.py
src/birdheatmap/plots/: README.md  __init__.py  all_years.py  annual_heatmap.py  daily_timeline.py  date_range_timeline.py  dawn_chorus.py  species_arrival_departure.py  species_portrait.py  species_ridge.py  time_of_day_violin.py  yesterday_timeline.py
src/birdheatmap/templates/: arrivals.html  index.html  missing.html  recordings.html  species_recordings.html
src/birdheatmap/views/: __init__.py  arrivals.py  missing.py  recordings.py  species_recordings.py
tests/: test_sync.py
